# Digital_Twin_semester_examples

./: .gitignore  README.md  cosmos_writer_pick_place.py  hand_on_5_domain_randomization.py
franka_pickplace_il/: .gitignore  README.md
franka_pickplace_il/checkpoints/: v4_best_filtered_data.pth
franka_pickplace_il/scripts/: filter_smooth_demos.py  perdim_normalize_hdf5.py  pickplace_policy.py  play_bc.py  train_bc.py
franka_pickplace_il/source/franka_pickplace/: pyproject.toml
franka_pickplace_il/source/franka_pickplace/franka_pickplace/: __init__.py
franka_pickplace_il/source/franka_pickplace/franka_pickplace/tasks/: __init__.py
franka_pickplace_il/source/franka_pickplace/franka_pickplace/tasks/manager_based/: __init__.py
franka_pickplace_il/source/franka_pickplace/franka_pickplace/tasks/manager_based/franka_pickplace/: __init__.py  franka_pickplace_env_cfg.py
franka_pickplace_il/source/franka_pickplace/franka_pickplace/tasks/manager_based/franka_pickplace/agents/robomimic/: bc.json
franka_pickplace_il/source/franka_pickplace/franka_pickplace/tasks/manager_based/franka_pickplace/mdp/: __init__.py  constants.py  observations.py  terminations.py
hands_on_6_visualization/: README.md  plotting.py  tracing.py
