[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "franka_pickplace"
version = "0.1.0"
description = "Isaac Lab IL pick-and-place task: scene, MDP terms, BC training config."
requires-python = ">=3.10"
dependencies = [
  "h5py",
  "numpy",
  "torch",
]

[tool.setuptools.packages.find]
include = ["franka_pickplace*"]
